@@ -30,6 +30,7 @@
 package org.antlr.v4.runtime;
 
 import org.antlr.v4.runtime.misc.Interval;
+import org.antlr.v4.runtime.misc.Pair;
 
 public class CommonTokenFactory implements TokenFactory<CommonToken> {
 	public static final TokenFactory<CommonToken> DEFAULT = new CommonTokenFactory();
@@ -48,7 +49,7 @@ public class CommonTokenFactory implements TokenFactory<CommonToken> {
 	public CommonTokenFactory() { this(false); }
 
 	@Override
-	public CommonToken create(TokenSource source, int type, String text,
+	public CommonToken create(Pair<TokenSource, CharStream> source, int type, String text,
 							  int channel, int start, int stop,
 							  int line, int charPositionInLine)
 	{
@@ -58,12 +59,10 @@ public class CommonTokenFactory implements TokenFactory<CommonToken> {
 		if ( text!=null ) {
 			t.setText(text);
 		}
-		else {
-			if ( copyText ) {
-				CharStream input = source.getInputStream();
-				t.setText(input.getText(Interval.of(start,stop)));
-			}
+		else if ( copyText && source.b != null ) {
+			t.setText(source.b.getText(Interval.of(start,stop)));
 		}
+
 		return t;
 	}
 
